Add QR code to overview page

--- a/index.html
+++ b/index.html
@@ -7,10 +7,11 @@
 <body>
 <h1>Project Space Couch</h1>
 <h2>Overview</h2>
+<div id="qr_container"></div>
 </body>
 
 <script>
     // You can also require other files to run in this process
-    //require('./renderer.js')
+    require('./renderer.js')
 </script>
 </html>
