--- a/index.html
+++ b/index.html
@@ -7,16 +7,16 @@
           rel="stylesheet" integrity="sha384-T8Gy5hrqNKT+hzMclPo118YTQO6cYprQmhrYwIiQ/3axmI1hQomh7Ud2hPOy8SP1" crossorigin="anonymous">
     <link href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0-alpha.3/css/bootstrap.min.css"
           rel="stylesheet" crossorigin="anonymous">
-    <link href="./assets/styles/global.css" rel="stylesheet">
+    <link href="./generated/styles/global.css" rel="stylesheet">
 
     <script>
-        $ = require('jQuery');
+        $ = jQuery = require('jquery');
         tether = require('tether');
         require('bootstrap');
         require('./assets/js/global.js');
     </script>
-</head>
 <body>
+</head>
 <h1>Project Space Couch</h1>
 <h2>Overview</h2>
 <div id="qr_container"></div>
