Add Typescript, npm run dist, npm run build, npm run watch

--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
         $ = jQuery = require('jquery');
         tether = require('tether');
         require('bootstrap');
-        require('./assets/js/global.js');
+        require('./generated/js/global.js');
     </script>
 <body>
 </head>
