Rename a few files

--- a/index.html
+++ b/index.html
@@ -14,9 +14,10 @@
         tether = require('tether');
         require('bootstrap');
         require('./generated/js/global.js');
+        require('./generated/js/captain.js')
     </script>
-<body>
 </head>
+<body>
 <h1>Project Space Couch</h1>
 <h2>Overview</h2>
 <div id="qr_container"></div>
@@ -24,9 +25,4 @@
 <button id="pause-button" type="button" class="btn btn-warning" data-toggle="button" data-sync="pause"><i class="fa fa-pause fa-4x"></i></button>
 
 </body>
-
-<script>
-    // You can also require other files to run in this process
-    require('./renderer.js')
-</script>
 </html>
