--- a/index.html
+++ b/index.html
@@ -3,10 +3,8 @@
 <head>
     <meta charset="UTF-8">
     <title>Project Space Couch</title>
-    <link href="https://maxcdn.bootstrapcdn.com/font-awesome/4.6.3/css/font-awesome.min.css"
-          rel="stylesheet" integrity="sha384-T8Gy5hrqNKT+hzMclPo118YTQO6cYprQmhrYwIiQ/3axmI1hQomh7Ud2hPOy8SP1" crossorigin="anonymous">
-    <link href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0-alpha.3/css/bootstrap.min.css"
-          rel="stylesheet" crossorigin="anonymous">
+    <link href="./assets/styles/font-awesome.css" rel="stylesheet">
+    <link href="./assets/styles/bootstrap.css" rel="stylesheet">
     <link href="./generated/styles/global.css" rel="stylesheet">
 
     <script>
