Split ClientNet class off of global.ts; rename to client.ts

--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
         $ = jQuery = require('jquery');
         tether = require('tether');
         require('bootstrap');
-        require('./generated/js/global.js');
+        require('./generated/js/client.js');
         require('./generated/js/captain.js')
     </script>
 </head>
