Added Captain role; improved List buttons

--- a/index.html
+++ b/index.html
@@ -12,15 +12,13 @@
         tether = require('tether');
         require('bootstrap');
         require('./generated/js/client.js');
-        require('./generated/js/captain.js')
+        require('./generated/js/overview.js')
     </script>
 </head>
 <body>
 <h1>Project Space Couch</h1>
 <h2>Overview</h2>
 <div id="qr_container"></div>
-
-<button id="pause-button" type="button" class="btn btn-warning" data-toggle="button" data-sync="pause"><i class="fa fa-pause fa-4x"></i></button>
 
 </body>
 </html>
