--- a/public/index.html
+++ b/public/index.html
@@ -7,7 +7,10 @@
 		<meta name="MobileOptimized" content="320" />
 		<meta name="mobile-web-app-capable" content="yes" />
 		<meta name="apple-mobile-web-app-capable" content="yes" />
-		<meta name="viewport" content="width=device-width, initial-scale=1" />
+		<meta
+			name="viewport"
+			content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no"
+		/>
 		<meta name="theme-color" content="#000000" />
 		<meta name="description" content="" />
 		<link rel="apple-touch-icon" href="logo192.png" />
